EN-181: small change